@@ -1,6 +1,8 @@
 2005-05-23  Sam Steingold  <sds@gnu.org>
 
 	* makemake.in (distrib) [!BINARY_DISTRIB]: do not expect gnu tr
+	* _clisp.c: do not include lispbibl.c bacause it is not included
+	with a binary distribution; include execname.c textually
 
 2005-05-22  Bruno Haible  <bruno@clisp.org>
 
